--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "ejs": "^3.1.10",
     "express": "^4.19.2",
     "express-ejs-layouts": "^2.5.1",
+    "http-errors": "^2.0.0",
+    "http-status-codes": "^2.3.0",
     "mongoose": "^8.4.0",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.2"
   }
 }
